--- a/yes_page.html
+++ b/yes_page.html
@@ -13,6 +13,14 @@
         <div class="gif_container">
             <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExMmo3c3l5ODh3ZGN6NHhhaDE2Mjg1ZjkwOXczdDFxbWM3dTBtaW9zaiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/9XY4f3FgFTT4QlaYqa/giphy.gif">
         </div>
+        <div class="image_container">
+            <img id="dary" src="dary.jpg">
+            <img id="dary2" src="dary2.jpg">
+            <img id="dary3" src="dary3.jpg">
+            <img id="dary4" src="dary4.jpg">
+            <img id="dary5" src="dary5.jpg">
+            <img id="dary6" src="dary6.jpg">
+            <img id="dary7" src="dary7.jpg">
     </div>
 </body>
 </html>
