--- a/yes_page.html
+++ b/yes_page.html
@@ -21,6 +21,7 @@
             <img id="dary5" src="dary5.jpg">
             <img id="dary6" src="dary6.jpg">
             <img id="dary7" src="dary7.jpg">
+        </div>
     </div>
 </body>
 </html>
